# CODEC_test

./: CMakeLists.txt  prj.conf
inc/opus/: audio_codec_opus.c
src/: main.c
